more css color tweaking

--- a/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
+++ b/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
@@ -168,17 +168,17 @@
 // Dropdowns
 // -------------------------
 
-@dropdown-bg:                    darken(@gray, 5%);
+@dropdown-bg:                    darken(@gray, 10%);
 @dropdown-border:                darken(@gray, 5%);
 @dropdown-fallback-border:       darken(@gray, 5%);
 @dropdown-divider-bg:            darken(@gray, 5%);
 
 @dropdown-link-active-color:     @yellow;
-@dropdown-link-active-bg:        lighten(@gray, 5%);
+@dropdown-link-active-bg:        @gray;
 
 @dropdown-link-color:            @yellow;
 @dropdown-link-hover-color:      lighten(@yellow, 5%);
-@dropdown-link-hover-bg:         @gray;
+@dropdown-link-hover-bg:         darken(@gray, 5%);
 
 @dropdown-link-disabled-color:   @gray-light;
 
