updated concerts page with banner for Orpheum

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -43,7 +43,7 @@ img {width:auto;height:auto}
 .txtshdw{text-shadow:1px 1px 1px rgba(0,0,0,0.3)}
 .undrln{text-decoration:underline}
 .bold{font-weight:700}
-h5 {color:@yellow;font-weight:600;}
+h5 {color:@red;font-weight:600;}
 
 /******** FONTS *************/
 .unica{font-family: 'Unica One', cursive;}
@@ -282,7 +282,7 @@ a.icon-tw:hover{background:#1ab2e8;}
 // used in advertising info pgs
 .nav-tabs {
     li a { color:@white;}
-    background: fade(@blue,50%);
+    background: darken(@yellow, 5%);
 }
 .advinfo .nav-tabs {
     // modified from .nav-tabs in navs.less
