css fine tuning

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -369,8 +369,8 @@ ul.sidebar-nav li ul.dropdown-menu{background:rgba(255,255,255,1)}*/
     p:nth-child(3){color:#ccc;font-size:10px;font-weight:bold;padding:0;margin:2px auto;}
     a.ftr-sm { padding:0; margin:2px auto; font-weight:bold; font-size:10px; text-decoration:none; color: @yellow}
 }
-
-.widget_recent_entries div ul li a{color:#a3aebf}
+// recent posts link color
+.widget_recent_entries div ul li a{color:#ccc}
 
 
 /* ==========================================================================
