modified all hardcoded 'EDITME' in theme

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -56,6 +56,7 @@ h5 {color:@red;font-weight:600;}
 .dark-blue{color:@dark-blue}
 .white{color:@white}
 .black{color:@black}
+.gray{color:@gray}
 .red-bg{background:@red}
 .blue-bg{background:@blue}
 .white-bg{background:@white}
