update app.less to make navbar dropdowns automatic on small screens

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -410,6 +410,8 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     img.logo{max-width:200px}
     .listenlive-txt{font-size:1.4em}
     .row1{margin-bottom:3%}
+    // enable navbar dropdowns on hover
+    ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
     // fixed navbar
     body.admin-bar .navbar-fixed-top { top: 28px !important; }
 }
