removed instagram feed added news feed to front-page

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -123,6 +123,7 @@ h5 {color:@red;font-weight:600;}
 
 /*index news and social */
 .indx-social{background:#fff;margin:0 2%;width:95%;}
+.indx-news{padding:4%;margin:auto;height:320px;overflow:auto;border-bottom:1px solid #dadada}
 .indx-fb-feed{max-width:95%;}
 
 /* 
@@ -142,7 +143,7 @@ h5 {color:@red;font-weight:600;}
 //.indx-bnr-multiple a img{width:auto;height:auto}
 
 // .hr-spcr{height:5px;border-radius:2px;-webkit-border-radius: 2px;border:1px solid rgba(255,255,255,0.1);background:rgba(0,0,0,0.05);width:95%;margin:3% auto;}
-.instgm-hshtg{font-size:0.75em;font-weight:500;}
+//.instgm-hshtg{font-size:0.75em;font-weight:500;}
 
 /****** RIBBON HEADINGS **********/
 div.rbn-hdg{
@@ -407,8 +408,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     /* hide the following for xsmall screens */
     .sidebar .facebook-like-box-3,
     .sidebar .widget_facebook-like-box,
-    .indx-social,
-    .indx-photo{display:none;visibility:hidden;height:0;width:0;}
+    .indx-fb-feed{display:none;visibility:hidden;height:0;width:0;}
     .listenlive{height:50px;line-height:50px}
     .row1{margin-bottom:4%}
     // fixed navbar
