--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -226,7 +226,14 @@ a.wthrcty:hover{text-decoration:none;color:#fff}
 .wthrspnsrs {margin-bottom:2%;padding-bottom:2%}
 .wthrspnsrs img{margin:5px auto}
 
-
+.feed-listing{
+    & a{font-weight:600}
+    & img {float:left;max-width:150px;height:auto;padding:0 2% 2% 0}
+    & span.listdate {float:right;margin-top:-40px;}
+    margin-bottom:0;
+    padding-bottom:0;
+    clear:both;
+}
 
 /* ==========================================================================
    Sidebar
