updated search to merge results from gcmaz.com and local site

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -235,6 +235,19 @@ a.wthrcty:hover{text-decoration:none;color:#fff}
     clear:both;
 }
 
+/*
+    Search page results
+*/
+.search-results{ margin:1% auto }
+ul.search-result-list li {padding:0}
+ul.search-result-list li a{ color:@blue;border:0;padding:1px 0 0 10px }
+ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
+.search-result-date{ font-size:10px;color:#666666 }
+
+.search-hdr h3{color:@gray;font-size:1em}
+
+
+
 /* ==========================================================================
    Sidebar
    ========================================================================== */
@@ -253,8 +266,6 @@ a.wthrcty:hover{text-decoration:none;color:#fff}
 //input.search-field{background:#212734;color:#ccc;border:0;}
 //button.search-submit{background:#2c3342;color:#5d636f;border:1px solid rgba(0,0,0,.3);}
 //button.search-submit:hover, button.search-submit:active{color:#9aa2b1;background:#373f50;border:1px solid rgba(0,0,0,.3);}
-// search results
-.search-hdr h3{color:@yellow;font-size:1em}
     
 /*  mus ctr style */
 .music-ctr, .sidebar .widget_tg_widget{margin:auto;overflow:hidden;background:@gray-dark}
