update front page feed - quit using hungryfeed rss & implement custom feed fn to show pinned items first, then regular items

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -124,6 +124,11 @@ h5 {color:@red;font-weight:600;}
 /*index news and social */
 .indx-social{background:#fff;margin:0 2%;width:95%;}
 .indx-news{padding:4%;margin:auto;height:320px;overflow:auto;border-bottom:1px solid #dadada}
+.indx-news-feed-listing {
+    a {}
+    p{ font-size:12px; color:#4e4e4e }
+    hr { margin:0 auto;padding:1%;display:block}
+}
 .indx-fb-feed{max-width:95%;}
 
 /* 
