fix display bug on search pages with added margin in base.php

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -243,7 +243,7 @@ a.wthrcty:hover{text-decoration:none;color:#fff}
 /*
     Search page results
 */
-.search-results{ margin:1% auto }
+.search-results{ margin:1% auto;min-height:300px }
 ul.search-result-list li {padding:0}
 ul.search-result-list li a{ color:@blue;border:0;padding:1px 0 0 10px }
 ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
