--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -348,6 +348,32 @@ ul.sidebar-nav li ul.dropdown-menu{background:rgba(255,255,255,1)}*/
 
 /********* end ************/
 
+/** Pagination */
+.pagination {
+    padding:20px 0 20px 2%;
+    position:relative;
+    font-size:11px;
+    line-height:13px;
+}
+.pagination span, .pagination a {
+    display:block;
+    float:left;
+    margin: 2px 2px 2px 0;
+    padding:6px 9px 5px 9px;
+    text-decoration:none;
+    width:auto;
+    color:#fff;
+    background: #555;
+}
+.pagination a:hover{
+    color:#fff;
+    background: #3279BB;
+}
+.pagination .current{
+    padding:6px 9px 5px 9px;
+    background: #3279BB;
+    color:#fff;
+}
 
 
 /* ==========================================================================
