--- a/wp-content/themes/gcmaz/assets/less/bootstrap/navbar.less
+++ b/wp-content/themes/gcmaz/assets/less/bootstrap/navbar.less
@@ -49,7 +49,7 @@
 // content for the user's viewport.
 
 .navbar-collapse {
-  max-height: 340px;
+  max-height: 500px;
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
   padding-left:  @navbar-padding-horizontal;
@@ -216,6 +216,7 @@
 
   @media (max-width: @screen-xs-max) {
     // Dropdowns get custom display when collapsed
+    font-size:14px;
     .open .dropdown-menu {
       position: static;
       float: none;
@@ -224,9 +225,12 @@
       background-color: transparent;
       border: 0;
       box-shadow: none;
+      font-size:12px;
       > li > a,
       .dropdown-header {
-        padding: 5px 15px 5px 25px;
+        padding: 15px 15px 5px 25px;
+        border-left:5px solid @gray-light;
+        margin-left:15px;
       }
       > li > a {
         line-height: @line-height-computed;
