--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -498,6 +498,8 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
     // fixed navbar
     body.admin-bar .navbar-fixed-top { top: 28px !important; }
+    //hide icons when navbar shrinks to "sm" prevent these from wrapping below menu items and breaking it
+    .navbar-icons{ line-height:0px;height:0px;width:0px;display:none;visibility:hidden}
 }
 
 @media (min-width: @screen-md) and (max-width: @screen-md-max) {
