added category page tpl

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -195,24 +195,11 @@ div.rbn-hdg:before{
 /******** archive pages **********/
 .archv-pg-lstng {margin:5px 10px}
 .archv-pg-hr{width:90%;margin:10px auto 0}
-div.archv-thmb {margin:0;padding:0;position:relative;z-index:5;}
-div.archv-thmb img{text-align:left;margin-top:20px;margin-left:-20px}
-div.archv-thmb:before{
-    content:" ";
-    background:url('/media/ribbon.png');
-    display:block;
-    width:10px;
-    height:10px;
-    position:absolute;
-    bottom:0;
-    left:0;
-    margin-left:-20px;
-    margin-bottom:-10px;
-    z-index:-1;
-}
+div.archv-thmb {}
+div.archv-thmb img{max-width:100%}
 div.archv-info{margin:0;padding:2% 0;}
 div.archv-info article{margin:auto;}
-span.archv-date{margin-right:10px;font-weight:400}
+span.archv-date{float:right;font-size:11px;margin-top:10px;}
 
 /******** single pages ***********/
 .info-img{padding:10px;max-width:100%;}
