update bg colors css

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -36,7 +36,7 @@ div.expldrbrd a img{max-width:660px;width:100%;height:auto;border:0}
 
 /**** common styles ****/
 img {width:auto;height:auto}
-.boxy {margin:0 2% 2%;background:rgba(255,255,255,.3); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
+.boxy {margin:0 2% 2%;background:rgba(255,255,255,.1); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
 .centered {text-align:center;margin:auto;display:block;}
 .dropshadow{-webkit-box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);}
 .outershadow{-webkit-box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);}
@@ -397,7 +397,7 @@ ul.sidebar-nav li ul.dropdown-menu{background:rgba(255,255,255,1)}*/
 .content-info { }
 .pg-ftr{
     background: @gray;
-    border-top:5px solid @yellow;
+    border-top:4px solid @yellow;
     .glyphicon{color: @yellow}
     li{list-style-type:none}
     ul{padding:0;margin:0}
@@ -413,11 +413,11 @@ ul.sidebar-nav li ul.dropdown-menu{background:rgba(255,255,255,1)}*/
     a{color:#fff;text-shadow:1px 1px 1px rgba(0,0,0,0.1);font-weight:500;}
     a:hover{color:#fff;text-decoration:none}
     span{margin:0 5px}
-    ul{margin:auto;text-align:left}
+    ul{margin:auto;text-align:left;border-right:3px solid fade(@white, 10%);}
     li{line-height:2em;padding-left:5%}
     padding:2% 0;
     margin:0;
-    background:rgba(0,0,0,0.1);
+    //background:rgba(0,0,0,0.1);
     text-align:center;
     -webkit-border-radius:0 0 0 14px;
     border-radius:0 0 0 14px;
