--- a/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
+++ b/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
@@ -35,7 +35,7 @@
 // Scaffolding
 // -------------------------
 
-@body-bg:               @gray-dark;
+@body-bg:               darken(@gray, 2%);
 @text-color:            @gray-dark;
 
 // Links
