--- a/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
+++ b/wp-content/themes/gcmaz/assets/less/bootstrap/variables.less
@@ -168,17 +168,17 @@
 // Dropdowns
 // -------------------------
 
-@dropdown-bg:                    darken(@gray, 10%);
-@dropdown-border:                darken(@gray, 5%);
-@dropdown-fallback-border:       darken(@gray, 5%);
-@dropdown-divider-bg:            darken(@gray, 5%);
+@dropdown-bg:                    lighten(@gray,2%);
+@dropdown-border:              lighten(@gray,2%);
+@dropdown-fallback-border:  lighten(@gray,2%);
+@dropdown-divider-bg:          lighten(@gray,2%);
 
 @dropdown-link-active-color:     @yellow;
 @dropdown-link-active-bg:        @gray;
 
 @dropdown-link-color:            @yellow;
 @dropdown-link-hover-color:      lighten(@yellow, 5%);
-@dropdown-link-hover-bg:         darken(@gray, 5%);
+@dropdown-link-hover-bg:         lighten(@gray, 4%);
 
 @dropdown-link-disabled-color:   @gray-light;
 
@@ -247,8 +247,8 @@
 @navbar-height:                    60px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-default-color:             @yellow;
-@navbar-default-bg:                lighten(@gray-dark, 10%);
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-bg:                darken(@gray, 5%);
+@navbar-default-border:            darken(@navbar-default-bg, 2%);
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
@@ -256,9 +256,9 @@
 // Navbar links
 @navbar-default-link-color:                  @yellow;
 @navbar-default-link-hover-color:        lighten(@yellow, 5%);
-@navbar-default-link-hover-bg:            darken(@navbar-default-bg, 2%);
+@navbar-default-link-hover-bg:            lighten(@gray,2%);
 @navbar-default-link-active-color:       @gray-light;
-@navbar-default-link-active-bg:            lighten(@gray-dark, 10%);
+@navbar-default-link-active-bg:            darken(@gray, 2%);
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
 
