update listen live css

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -111,8 +111,20 @@ h5 {color:@red;font-weight:600;}
     height:60px;
 }
 .listenlive:hover{}
-.listenlive-txt{color:#fff;text-decoration:none;font-weight:500;font-size:1.2em;display:block;vertical-align:middle;text-shadow:1px 1px 2px rgba(183,109,0,0.5);margin-left:5%}
-.listenlive-txt:hover{color:#fff;text-decoration:none}
+.listenlive-txt{
+    color:@white;
+    text-decoration:none;
+    font-weight:500;
+    font-size:1em;
+    font-family: 'Montserrat', sans-serif;
+    text-transform:uppercase;
+    display:block;
+    vertical-align:middle;
+    text-shadow:1px 1px 2px rgba(183,109,0,0.5);
+    margin-left:5%;
+}
+.listenlive-txt:hover{color:@white;text-decoration:none}
+span.glyphicon-play {font-size:0.7em}
 .strm-spnsr{vertical-align:middle;height:100%;padding:0;margin:0 auto;text-align:center;border-left:1px solid rgba(0,0,0,.1)}
 .strm-spnsr a{height:100%;display:block}
 .strm-spnsr a img{width:auto;height:auto;max-width:100%;max-height:100%;}
@@ -479,7 +491,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     .innerbg {background-image: url(/media/bg-top.jpg);}
     img.logo{max-width:200px}
-    .listenlive-txt{font-size:1.4em}
+    .listenlive-txt{font-size:1.2em}
     .row1{margin-bottom:3%}
     // enable navbar dropdowns on hover
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
@@ -493,7 +505,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     .innerbg {background-image: url(/media/bg-top.jpg);}
     img.logo{max-width:230px}
     .listenlive{margin-top:5%}
-    .listenlive-txt{font-size:1.4em}
+    .listenlive-txt{font-size:1.2em}
     .strm-lft{margin-left:2%;margin-right:-2%}
     // enable navbar dropdowns on hover
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
@@ -505,7 +517,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     .innerbg {background-image: url(/media/bg-top.jpg);}
     img.logo{max-width:250px}
     .listenlive{margin-top:7%}
-    .listenlive-txt{font-size:1.6em}
+    .listenlive-txt{font-size:1.4em}
     .strm-lft{margin-left:2%;margin-right:-2%}
     // enable navbar dropdowns on hover
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
