--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -109,6 +109,7 @@ h5 {color:@red;font-weight:600;}
     vertical-align:middle;
     line-height:60px;
     height:60px;
+    min-height:60px;
 }
 .listenlive:hover{}
 .listenlive-txt{
@@ -121,14 +122,14 @@ h5 {color:@red;font-weight:600;}
     display:block;
     vertical-align:middle;
     text-shadow:1px 1px 2px rgba(183,109,0,0.5);
-    margin-left:5%;
 }
 .listenlive-txt:hover{color:@white;text-decoration:none}
 span.glyphicon-play {font-size:0.7em}
 .strm-spnsr{vertical-align:middle;height:100%;padding:0;margin:0 auto;text-align:center;border-left:1px solid rgba(0,0,0,.1)}
-.strm-spnsr a{height:100%;display:block}
-.strm-spnsr a img{width:auto;height:auto;max-width:100%;max-height:100%;}
-.studio-sponsor a img{width:100%;height:auto;max-width:150px;max-height:100px;}
+.strm-spnsr a{max-height:100%;display:block}
+.strm-spnsr a img{width:auto;height:auto;max-height:60px;}
+
+.studio-sponsor a img{width:auto;height:auto;max-width:150px;max-height:100px;}
 /******end listen live button*********/
 
 /*make facebook boxes responsive etc ******/
