--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -36,7 +36,7 @@ div.expldrbrd a img{max-width:660px;width:100%;height:auto;border:0}
 
 /**** common styles ****/
 img {width:auto;height:auto}
-.boxy {margin:0 2% 2%;background:rgba(255,255,255,.1); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
+.boxy {margin:0 2% 2%;background:fade(@gray-dark,80%); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
 .centered {text-align:center;margin:auto;display:block;}
 .dropshadow{-webkit-box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);}
 .outershadow{-webkit-box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);}
@@ -172,7 +172,7 @@ div.rbn-hdg{
     margin:0 0 10px -10px;
     text-shadow:1px 1px 1px rgba(0,0,0,0.5);
     z-index:5;
-    background:lighten(@gray,10%);
+    background:@gray-dark;
     border:1px solid transparent; //necessary to display properly
     -webkit-border-top-left-radius: 4px;
     -moz-border-radius-topleft: 4px;
