darken footer css

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -36,7 +36,7 @@ div.expldrbrd a img{max-width:660px;width:100%;height:auto;border:0}
 
 /**** common styles ****/
 img {width:auto;height:auto}
-.boxy {margin:0 2% 2%;background:fade(@gray-dark,80%); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
+.boxy {margin:0 2% 2%;background:darken(@gray,5%); -webkit-border-radius:4px;border-radius:4px;-moz-border-radius:4px;padding:5px;}
 .centered {text-align:center;margin:auto;display:block;}
 .dropshadow{-webkit-box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);box-shadow:  0px 7px 5px 0px rgba(0, 0, 0, .3);}
 .outershadow{-webkit-box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, .5);}
@@ -409,7 +409,7 @@ ul.sidebar-nav li ul.dropdown-menu{background:rgba(255,255,255,1)}*/
 
 .content-info { }
 .pg-ftr{
-    background: @gray;
+    background: darken(@gray, 5%);
     border-top:4px solid @yellow;
     .glyphicon{color: @yellow}
     li{list-style-type:none}
