start to add search filters - not functional yet

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -269,7 +269,25 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 
 .search-hdr h3{color:@gray;font-size:1em}
 
-
+#search-filter{
+    display:block;
+    padding:0 10px;
+    background:#f5f5f5;
+    //margin:0 auto 20px;
+}
+.search-filter-hide{
+    height:0px;
+    overflow:hidden;
+}
+.search-filter-show{
+    min-height:100px;
+}
+#search-filter-toggle{
+    float:right;
+    background:#f5f5f5;
+    padding:2px 7px;
+    cursor:pointer;
+}
 
 /* ==========================================================================
    Sidebar
