--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -271,21 +271,50 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 
 #search-filter{
     display:block;
-    padding:0 10px;
-    background:#f5f5f5;
-    //margin:0 auto 20px;
+    text-align:left;
 }
+.search-filter-info{
+    font-size:16px;
+    font-weight:700;
+    color: @gray;
+    text-shadow: none;
+    margin:0;
+    padding:0;
+}
+
+.search-filter-left{
+    float:left;
+    text-align:left;
+    width:50%;
+}
+.search-filter-right{
+    float:right;
+    text-align:left;
+    width:50%;
+}
+.submitSearchFilter{
+    margin:auto;
+}
+
 .search-filter-hide{
     height:0px;
     overflow:hidden;
+    border:1px solid transparent;
+    margin:0;
+    padding:0;
 }
+.search-filter-hide .search-filter-info {margin:0;padding:0;}
 .search-filter-show{
     min-height:100px;
+    padding:0 10px 5px;
+    margin:0 auto 20px;
+    background:#f5f5f5;
 }
 #search-filter-toggle{
     float:right;
     background:#f5f5f5;
     padding:2px 7px;
+    margin:0;
     cursor:pointer;
 }
 
