working filtered search

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -286,14 +286,19 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
     float:left;
     text-align:left;
     width:50%;
+    margin-top:7px;
+    padding:5px;
 }
 .search-filter-right{
     float:right;
     text-align:left;
     width:50%;
+    margin-top:7px;
+    padding:5px;
 }
 .submitSearchFilter{
     margin:auto;
+    width:100%;
 }
 
 .search-filter-hide{
