change PTO header btm margin

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -565,6 +565,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     body.admin-bar .navbar-fixed-top { top: 46px !important; }
     //shrink page header text
     .page-header h1, .page-header h2, .page-header h3, .page-header h4, .page-header h5, .page-header h6 { font-size:1.1em;}
+    .takeover-hdr-wrap{margin-top:-8px;}
 }
 
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
