added collapsing divs to home page for news and fb

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -145,6 +145,13 @@ span.glyphicon-play {font-size:0.7em}
     hr { margin:0 auto;padding:1%;display:block}
 }
 .indx-fb-feed{max-width:95%;}
+//toggle area for bootstrap collapsible divs
+.hp-toggle-feed{color:@yellow;margin:auto;text-align:center;} //h4 togglers
+.toggle-arrow-up{width:10px;height:9px;background:url('/media/toggle-arrow-up');display:inline-block;}
+.toggle-arrow-down{width:10px;height:9px;background:url('/media/toggle-arrow-down');display:inline-block;}
+
+.panel-group .panel .panel-heading {background:#333333;}
+.panel {border:1px solid rgba(51,51,51,0.5);}
 
 /* 
     index ad rotate banners
