update fb widget css update no-sidebar tpl

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -363,10 +363,10 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 .music-ctr iframe{width:100%;min-height:300px;max-height:400px;overflow:hidden;margin-top:5px}
 
 /*  facebook */
-.sidebar .widget_facebook-like-box {background:@gray-dark}
+/*.sidebar .widget_facebook-like-box {background:@gray-dark}
 .sidebar .widget_facebook-like-box .widget-inner .fb-like-box span iframe,
 .sidebar .widget_facebook-like-box .widget-inner .fb-like-box span,
-.sidebar .widget_facebook-like-box .widget-inner .fb-like-box {padding-top:0;margin-top:0}
+.sidebar .widget_facebook-like-box .widget-inner .fb-like-box {padding-top:0;margin-top:0}*/
 
 /* adrotate banner widget */
 .sidebar .widget_adrotate_widgets{margin:auto;padding:5px 0 10px;text-align:center;}
@@ -778,9 +778,7 @@ textarea.ginput_container input, textarea.ginput_container select, textarea.ginp
     }
     img.logo{max-width:145px}
     /* hide the following for xsmall screens */
-    .sidebar .facebook-like-box-3,
-    .sidebar .widget_facebook-like-box,
-    .indx-fb-feed{display:none;visibility:hidden;height:0;width:0;}
+    .sidebar .widget_facebook-likebox{display:none;visibility:hidden;height:0;width:0;}
     .listenlive{height:50px;line-height:50px}
     .row1{margin-bottom:4%}
     // fixed navbar
