--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -778,7 +778,7 @@ textarea.ginput_container input, textarea.ginput_container select, textarea.ginp
     }
     img.logo{max-width:145px}
     /* hide the following for xsmall screens */
-    .sidebar .widget_facebook-likebox{display:none;visibility:hidden;height:0;width:0;}
+    .sidebar .widget_facebook_likebox{display:none;visibility:hidden;height:0;width:0;}
     .listenlive{height:50px;line-height:50px}
     .row1{margin-bottom:4%}
     // fixed navbar
