--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -580,7 +580,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 .ginput_container input, .ginput_container select, .ginput_container textarea {
 	display: block;
 	width: 100%;
-	height: 34px;
+	/*height: 34px;*/
 	padding: 6px 12px;
 	font-size: 14px;
 	line-height: 1.428571429;
@@ -594,6 +594,11 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 	-webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
+.ginput_container input[type="file"]{
+    border: none;
+}
+
 
 .ginput_container input:-moz-placeholder, .ginput_container select:-moz-placeholder, .ginput_container textarea:-moz-placeholder {
 	color: #999;
@@ -767,7 +772,11 @@ textarea.ginput_container input, textarea.ginput_container select, textarea.ginp
 	margin-top: 5px;
 }
 
-
+div.ginput_complex label {
+	font-size: 10px;
+	font-weight: 400;
+	color: #666666;
+}
 
 /* ==========================================================================
    Media Queries
