added instagram icon

--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -410,6 +410,7 @@ ul.search-result-list li a:hover{ border-left:2px solid @blue;padding-left:8px }
 .navbar-icons a{ text-decoration:none;padding:0;margin:0;line-height:60px;height:60px;width:60px;display:inline-block;vertical-align:middle;text-align:center;}
 a.icon-fb:hover{background:#3b589c;}
 a.icon-tw:hover{background:#1ab2e8;}
+a.icon-instgrm:hover{background:#125688;}
 
 /************ NAV tabs *************/
 // used in advertising info pgs
