--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -797,7 +797,7 @@ div.ginput_complex label {
     .page-header h1, .page-header h2, .page-header h3, .page-header h4, .page-header h5, .page-header h6 { font-size:1.1em;}
     .takeover-hdr-wrap{margin-top:-8px;}
     .sticker-logo{z-index:100 !important;position:relative;top:-100px;left:40px;height:0;overflow:visible;}
-    .sticker-img{max-width:120px;height:auto;}
+    .stickeron-img{max-width:120px;height:auto;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
 }
 
@@ -814,7 +814,7 @@ div.ginput_complex label {
     .navbar-icons{ line-height:0px;height:0px;width:0px;display:none;visibility:hidden}
     //shrink page header text
     .page-header h1, .page-header h2, .page-header h3, .page-header h4, .page-header h5, .page-header h6 { font-size:1.3em;}
-    .sticker-logo{z-index:100 !important;position:relative;top:-100px;left:100px;height:0;overflow:visible;}
+    .sticker-logo{z-index:100 !important;position:relative;top:-140px;left:100px;height:0;overflow:visible;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
 }
 
@@ -828,7 +828,7 @@ div.ginput_complex label {
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
     // fixed navbar
     body.admin-bar .navbar-fixed-top { top: 28px !important; }
-    .sticker-logo{z-index:100 !important;position:relative;top:-140px;left:250px;height:0;overflow:visible;}
+    .sticker-logo{z-index:100 !important;position:relative;top:-180px;left:250px;height:0;overflow:visible;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
 }
 
@@ -842,6 +842,6 @@ div.ginput_complex label {
     ul.nav li.dropdown:hover > ul.dropdown-menu {display: block;}
     // fixed navbar
     body.admin-bar .navbar-fixed-top { top: 28px !important; }
-    .sticker-logo{z-index:100 !important;position:relative;top:-165px;left:300px;height:0;overflow:visible;}
+    .sticker-logo{z-index:100 !important;position:relative;top:-185px;left:300px;height:0;overflow:visible;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
 }
