--- a/wp-content/themes/gcmaz/assets/less/app.less
+++ b/wp-content/themes/gcmaz/assets/less/app.less
@@ -136,9 +136,86 @@ span.glyphicon-play {font-size:0.7em}
 /*make facebook boxes responsive etc ******/
 .fb-like-box, .fb-like-box span, .fb-like-box span iframe[style] {width:100% !important;height:auto;border:0 !important;-webkit-border-radius:3px;border-radius:3px;padding:5px 0;margin:5px auto;}
 
-/*index news and social */
-.indx-social{background:#fff;margin:0 2%;width:95%;}
-.indx-news{padding:4%;margin:auto;height:320px;overflow:auto;border-bottom:1px solid #dadada}
+
+
+/* INDEX */
+
+.indx-btm{
+    width:100%;
+    margin:1%;
+}
+
+.indx-group-wrap{
+    margin:5% 4%;
+    padding:1%;
+    border-radius:4px;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+}
+.indx-sm-btns{
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3f3f3f+0,1b1b1b+100 */
+    background: #3f3f3f; /* Old browsers */
+    background: -moz-linear-gradient(top,  #3f3f3f 0%, #1b1b1b 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #3f3f3f 0%,#1b1b1b 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #3f3f3f 0%,#1b1b1b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f3f3f', endColorstr='#1b1b1b',GradientType=0 ); /* IE6-9 */
+    -webkit-border-radius:4px; border-radius:4px;
+    -webkit-box-shadow:0 2px 2px 0 rgba(0,0,0,.2); box-shadow:0 2px 2px 0 rgba(0,0,0,.2);
+    width:98%;
+    margin:15px auto;
+    vertical-align:middle;
+    line-height:35px;
+    height:35px;
+    min-height:35px;
+    color:@yellow;
+    text-align: center;
+}
+.indx-sm-btns:hover{
+    color:@yellow;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#383838+2,303030+100 */
+    background: #383838; /* Old browsers */
+    background: -moz-linear-gradient(top,  #383838 2%, #303030 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #383838 2%,#303030 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #383838 2%,#303030 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#383838', endColorstr='#303030',GradientType=0 ); /* IE6-9 */
+}
+.indx-sm-btns a{
+    color:@yellow;
+    width:100%;
+    height:100%;
+    display:block;
+}
+.song-req .glyphicon-music{
+    font-size:1.2em;
+    color: @gray-light;
+}
+.indx-sm-btns a:hover{
+    text-decoration: none;
+}
+
+.indx-sm-c2a{
+    //small call-2-action (wraps banners etc)
+    margin:5px auto;
+    padding:3px 0;
+    text-align: center;
+    width:100%;
+    background:#5c5c5c;
+}
+.indx-sm-c2a div{
+    //internal div (usually adrotate)
+    width:100%;
+    margin:3px auto;
+    padding:0;
+    text-align: center;
+}
+
+.indx-news{
+    padding:10px;
+    height:400px;
+    overflow:auto;
+    background:@white;
+    border-bottom:1px solid #dadada;
+}
 .indx-news-feed-listing {
     a {}
     p{ font-size:12px; color:#4e4e4e }
@@ -799,6 +876,10 @@ div.ginput_complex label {
     .sticker-logo{z-index:100 !important;position:relative;top:-100px;left:40px;height:0;overflow:visible;}
     .stickeron-img{max-width:120px;height:auto;}
     .stickeron-info{position:relative;top:-400px;left:150px;z-index: -10;}
+    .indx-news{
+        max-width:90%;
+        margin:auto;
+    }
 }
 
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
